[package]
name = "benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ecs_generator = { path = "../" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
criterion = { version = "0.3" }

[[bench]]
name = "test"
path = "benches/lib.rs"
harness = false
