[package]
name = "test_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
rand = { version = "0.8.5", features = ["small_rng"] }
ecs_generator = { path = "../" }
